Account for gc logging to stdout.